--- a/docs/i18n.md
+++ b/docs/i18n.md
@@ -3,10 +3,10 @@
 ```
 cd d:
 cd D:\FluentUI-Master
-C:\Qt\6.8.1\msvc2022_64\bin\lupdate.exe .\FluControls\ .\FluWinGallery\ -ts .\i18n\en-us.ts .\i18n\zh-cn.ts
+C:\Qt\6.8.1\msvc2022_64\bin\lupdate.exe .\FluControls\ .\FluWinGallery\ -ts .\i18n\en-US.ts .\i18n\zh-CN.ts
 
 ...
 
-C:\Qt\6.8.1\msvc2022_64\bin\lrelease.exe .\i18n\en-us.ts .\i18n\zh-cn.ts
+C:\Qt\6.8.1\msvc2022_64\bin\lrelease.exe .\i18n\en-US.ts .\i18n\zh-CN.ts
 ```
 
